Costs book, PLE spec 100000, implemented and tested OK.